# FLARE

./: .gitignore  README.md  pyproject.toml
src/flare/: config.py  main.py
src/flare/api/: main.py
src/flare/embedding/: embedding_demo.py  main.py
src/flare/frontend/: app.js  index.html  styles.css
src/flare/llm/: llm_handler_demo.py  main.py
src/flare/rag/: qdrant_handler.py  qdrant_handler_demo.py
src/flare/utils/: document_handler.py  documnet_handler_demo.py
