[project]
name = "flare"
version = "0.1.0"
description = ""
authors = [
    {name = "JuiHsuanLee0303",email = "juihsuanlee0303@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]
packages = [{include = "flare", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
